--- a/components/modalBackground/modalBackground.module.scss
+++ b/components/modalBackground/modalBackground.module.scss
@@ -6,8 +6,7 @@
 	left: 0;
 	bottom: 0;
 	right: 0;
-	height: 100vh;
-	width: 100vw;
+	height: 100svh;
 	overflow: auto;
 	z-index: 5;
 	border-radius: inherit;
