--- a/components/navbar/navbar.module.scss
+++ b/components/navbar/navbar.module.scss
@@ -3,7 +3,6 @@
 	top: 0;
 	left: 0;
 	bottom: 0;
-	z-index: 0;
 }
 
 @media (min-width: 900px) {
