--- a/components/skillCategory/skillCategory.module.scss
+++ b/components/skillCategory/skillCategory.module.scss
@@ -1,5 +1,6 @@
 @use '../../styles/settings' as *;
 
+// Each Container has a list of mapped children, displayed as icons
 .icons_container {
 	// ----- Skills Map ----- //
 	.skills_list {
@@ -11,27 +12,36 @@
 		.skill {
 			background: none;
 			border: none;
-			margin-inline: 0.6rem;
+			margin-inline: 0.2rem;
 			margin-block: 1rem;
 			flex-basis: 0;
 			flex-grow: 1;
 			flex-shrink: 1;
-			.icon {
-				min-width: 100%;
-				height: 100%;
+			.icon_wrapper {
 				border: 2px solid;
+				height: 3rem;
+				width: 3rem;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				border-radius: 50%;
 				padding: 0.2rem;
 				cursor: pointer;
-				box-shadow: $box-shadow-light-hover;
+				.icon {
+					font-size: 3rem;
+					max-width: 80%;
+					height: 100%;
+				}
+				&:hover {
+					box-shadow: $box-shadow-light-hover;
+				}
 			}
 		}
 	}
 	// ----- Modal ----- //
 	.modal_wrapper {
-		font-family: $font-family-serif;
 		width: 100%;
-		max-height: fit-content;
+		min-height: fit-content;
 		display: flex;
 		flex-direction: column;
 		align-items: flex-start;
@@ -41,22 +51,25 @@
 			display: flex;
 			width: 100%;
 			align-items: center;
-			justify-content: center;
+			justify-content: space-between;
 			.title {
 				font-size: 2rem;
 				font-family: inherit;
 			}
-			.icon {
-				border-radius: 50%;
-				align-self: center;
-				justify-self: center;
+			.icon_wrapper {
 				border: 2px solid;
-				box-sizing: content-box;
-				min-width: 1.5rem;
-				height: 1.5rem;
-				margin-block: 1rem;
-				margin-right: 1rem;
-				padding: 0.5rem;
+				height: 3rem;
+				width: 3rem;
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				border-radius: 50%;
+				padding: 0.2rem;
+				.icon {
+					font-size: 3rem;
+					max-width: 80%;
+					height: 100%;
+				}
 			}
 		}
 		.text_container {
@@ -73,6 +86,8 @@
 		}
 	}
 }
+
+// Functions to assign text colour for each category
 .plan {
 	@include skillHover($color-plan);
 }
@@ -85,7 +100,7 @@
 
 // ----------- BREAKPOINTS ----------- //
 // ----- Medium (Tablets - Laptops) ----- //
-// Changes to padding and spacing
+// 1. Updates to padding and spacing on larger screens
 @media (min-width: 600px) {
 	.icons_container {
 		.skills_list {
@@ -94,30 +109,27 @@
 			.skill {
 				margin-inline: 1rem;
 				width: 1rem;
-				.icon {
-					padding: 0.4rem;
-					min-width: 3rem;
-					height: 3rem;
-				}
 			}
 		}
 		.modal_wrapper {
 			padding: 3rem;
 			.header {
-				justify-content: flex-start;
-				.icon {
-					height: 2rem;
-					min-width: 2rem;
-					padding: 0.2rem;
-				}
+				max-height: 5rem;
 				.title {
 					font-size: 3rem;
+				}
+				.icon_wrapper {
+					width: 3.5rem;
+					height: 3.5rem;
 				}
 			}
 		}
 	}
 }
 //  ----- Large (Laptops - Screens) ----- //
+// 1. The icons are made bigger to exploit larger screen size
+// 2. The skills are now displayed in 2 columns rather than 4
+// 3. The modal content is made bigger and the layout changed to make better use of the screen width
 @media (min-width: 900px) {
 	.icons_container {
 		.skills_list {
@@ -128,29 +140,29 @@
 			padding-bottom: 3rem;
 			border-bottom: 1px solid #e6ecf8;
 			.skill {
-				margin-inline: 1rem;
-				.icon {
-					padding: 0.4rem;
-					min-width: 3rem;
-					height: 3rem;
+				margin-inline: 3rem;
+				.icon_wrapper {
 					box-shadow: none;
+					width: 3.5rem;
+					height: 3.5rem;
 					&:hover {
 						box-shadow: $box-shadow-light;
 					}
 				}
 			}
 		}
-		.modal_content {
+		.modal_wrapper {
 			padding: 4rem;
 			.header {
-				justify-content: flex-start;
-				.icon {
-					min-width: 3rem;
-					height: 3rem;
-					padding: 0.3rem;
-				}
+				justify-content: center;
+				padding-bottom: 3.5rem;
 				.title {
-					font-size: 3rem !important;
+					font-size: 3.5rem;
+				}
+				.icon_wrapper {
+					width: 3.5rem;
+					height: 3.5rem;
+					margin-right: 3.5rem;
 				}
 			}
 		}
