--- a/components/skills/skills.module.scss
+++ b/components/skills/skills.module.scss
@@ -183,7 +183,7 @@
 						align-content: normal;
 						justify-content: center;
 						align-items: normal;
-						padding-block: 3rem;
+						padding-block: 1rem;
 						margin: 0;
 						.column {
 							border-right: 1px solid rgba($color: $color-grey, $alpha: 0.5);
