--- a/styles/settings/_functions.scss
+++ b/styles/settings/_functions.scss
@@ -38,7 +38,7 @@
 }
 @mixin skillHover($color) {
 	&:hover {
-		.icon {
+		.icon_wrapper {
 			color: $color;
 		}
 		.name {
